--- a/CheckRoadSigns.ipynb
+++ b/CheckRoadSigns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -13,6 +13,7 @@
     "from skimage import io\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
+    "import os\n",
     "%matplotlib inline"
    ]
   },
