Create function for splitting data on train and test.

--- a/CheckRoadSigns.ipynb
+++ b/CheckRoadSigns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -52,24 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f73f3dfbb38>"
+       "<matplotlib.image.AxesImage at 0x7f0b25bb5828>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFkAAABZCAYAAABVC4ivAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACnpJREFUeJztXUtvHFkV/k51V7e73Xa7/YjfjickYpQdEgIkNiMhxMAm\nrEbMArEYaTawQGLBCP4AKyQWbCIxAjY8JBYMaKQRjBghNmgiBjSZBDuTZJzY8SMeO+6X3V2Pw+Lc\nrnMdx3HHj5vg1CdZffvUrbpVp8+951nXxMxIcbLwnvYNPA9ImewAKZMdIGWyA6RMdoCUyQ6QMtkB\njsRkInqZiOaI6GMieuO4buq0gQ7rjBBRBsA8gK8CWATwPoBXmfna8d3e6UD2COd+AcDHzHwLAIjo\ntwAuAdiXyV42zxm/BACIKdh7C3FnYukEI1IhYITSLY6s49I34+l1mMk6p9M31HE4NsfIomWsO5U2\nU4SHYZ0Bbm2tM/PInk4P4ShMngRw1/q+COCLjzsh45cwcO5rAIBmZkVoGEqOc6sPAEDoSWh+Lk7a\nrfC+fLarejwjfUvFMwktCvVHCqKa0PCp3gg3AABxZDE2HEiaxGUAQDv3QGlEuz4BIJj708J+z2rj\nKEzuCkT0OoDXAcDziyc93DOJozB5CcC09X3K0HaBmS8DuAwA2cIgM3Uk0+sctzpndx0T6DT3syJF\nfi6X0Eo9Iv3DldGE1qgHSbtabwEAttt6xXYkX6JIH9+z7sNDR8L36itbkrvFUayL9wFcIKIXiCgH\n4FsA3jrC9U4tDi3JzBwS0fcAvAPRFG8y80cHnRfHHaVjhib9nWM24mYJkM+6JhfyeQBAb18hoQ1X\nZC2uDFQSWm2rmbTzeVl/a42+hNbYkdmx3dRZErV1HOaWaexVsIeR5COtycz8NoC3j3KN5wGpx+cA\nJ25d2GAwAhalRJFMffJ0+sXYNo2dhEbsJ+1cVtqVvnJCGxsWEzCX0+t41nrjeXJOPq/n9NRFsW3E\njYTWCHS5CMMtGduyx9nY6wTbnu4OqSQ7gFNJBgDPk981CmToZrOWHOspiNQViiq9iFSa+otipk2M\nTCa0YkGuV6vdS2hBu560s5nQnJtPaBmS60dty0tsq+OxQ2Ym5VXBUsbcd6gS3y1SSXaAlMkO4Fbx\nMSOIjDcW9QIA8j2WYvONfRqrnTs4oDGJc7OzAICh/v6EtrF5GwDQaC4ntCDSqe9nZZxKeSahTY1P\nAACao62Etrh8K2mvrElIYt3yHONQFF98CLlMJdkBUiY7gHPrIjRuddZ8UqRT0jeWwMhwKaGdm9IY\n1MykhG6DbV1OGtU1AEAcrSc0j9Ri8bMyTi6jLnTH0ij36jigLT3f25RxVtSy2aqKxRK0tw96xD1I\nJdkBnHt8SabCBIPCQL2uUlHs0hfPv5DQpicmkna0IxK6cX8xocXGO8t4qsSyOfX4soa+01BJ34gk\nVFosqBdYLqkCLsxOAQA8jahibU1mzNLqWkLT+fR4pJLsACmTHcC54ouMwivmRIGUiqp8JsfHAQBn\nhjU36XuqfO6vfwIAePBAlws/I8sNWf2yVtDJM5mYKNhMaHUTDGLWpapc1qWjvyL5PspqDHpoUGil\nktroH9z8277PaSOVZAdImewAzpeLDgYrMvSF8+cT2vSELBcdFxYA1lY1ulavi+tMnqb3875Mfc9K\nY3FsJ0BlGfE9jVF3yjLCttrO9ZouN1EgS8LI6NmENjRk4ta+lit8sP/j7UIqyQ7gVJKJCHmTDJ2a\nFmm5+KJKcrk0DABYvnsnoTVqlicG8bryPSqVGSOpGasgJgxV8ZGR6kxOawIilvO3d9TSJahR3JsT\nqS33qZKr1aVvHFqVSF0ilWQHSJnsAE6XC8/zUCxKqdbomNidQ0Nag9aTkenpe5oq8jN6i+TL0kCh\nutCeyQbFkZUWiqzaiGwnAaqBqCCSqR9GusT0FrU9OSlBqVJJbfjlZVG6S0t7iqQORCrJDuBW8YGQ\niSUQQ6EEYbbrKrVejyiV3t7ehMamHwDUq3K79YYmOBniteULdtmRKsZWQGYcPSdmScgOlPTaldKF\npJ0lUcC3Fv6b0K7NS0XwwpJmULpFKskOkDLZARwnUoHI1FHMz88D2F3Ad25GFE5vnyqcYkErdnp7\npZ3LqXfWrEkxea2qcd5O/QYgMWwZSOWpvyTKdmJSl4uBsgalAlM5NHdjPqGtrMg4O3YNbpdIJdkB\nUiY7gPO6i9C4pXeXJfATWkV9YUum4sy0lmENl9XSGBs39qtVxrW8YuLFrO6uZVqDA7GP80W1Lsan\nJfAzNaNprkZdl607N+VVmOtzNxJa1SRSo9htpX2KLuE41MmIY5G4nC/SuHhPK38aJgizualZjNkZ\nTaR+5qxIeMl6P2TQeH9+QV/6qT7QpGnblONWBvSc4TGZEUz6+Hfu6YtcV+euy3080MLFVmhmRO7J\nXy5KJdkBUiY7wFPLjJAvQ+/UNJm5+ukGAKBtBXu26taUbYtinJ0eS2heXl7IGbCmcTtU29oviGId\nGVObODIFFddu3k5oH15TF3pxTWzi2LPejDUV++yllfbPJFImO4Dz5aLzBmq1KVrfy1mx46xZQgK1\nee/eU3e51RJLot7Uor8zI+Iij43qO9rlYbWj83lZGnxrnLtLqwCAf/3nakK7vaC1HGxsYbLqtGJP\nrIvwEJsqpJLsAM49vs4bqa1IpLVQsGLDxm4NrB0QAuvL4qooxmZLaZNbEthpWcnTgYomQMmk8JeX\ntIzgo+viyS0sqo1e39FsSyZjtmKw3uFmdN6kTRXfM4mUyQ5w4HJBRNMAfg1gFPJq+WVm/hkRDQL4\nHYBZAJ8AeIWZN/e7Tged5cLPyTRm63duNCVtxJadXMhpgrNlFOLqug4Tmd1eqnWN887MqE3cefHn\n9oKmjRYWxIVuWblXv0cVY0fBetbSQJ2mdzIv5oQAfsDMFwF8CcB3iegigDcAvMvMFwC8a76neAQO\nlGRmXgawbNo1IroO2RrnEoCXTLdfAXgPwA8PuBpis71BYNL2dqjTy4q4UEYlKNi135CcE1h7DK2s\nizLc2NQtc1buq5Lr75fy19gKhbaN9DctZWclThCb7R+iyK4Wkg5x/OQ23BPJPhHNAvgcgH8CGDU/\nAACsQJaTFI9A10wmohKAPwD4PjNX7WMsHsYjf2Iiep2IrhDRFY6ePD92GtDVvnBE5AP4M4B3mPmn\nhjYH4CVmXiaicQDvMfNnD7jOfQANAOuP63dMGHYwztlj2bKMZCH8BYDrHQYbvAXgOwB+Yj7/eNC1\nmHmEiK4w8+cP6ntUuBqnG3Tj8X0ZwLcBfEhE/za0H0GY+3sieg3AAoBXTuYW///RjXXxD+ze2M/G\nV473dk4nnobHd/mUjXMgDr0haorukcYuHMApk09qv2UiepOI1ojoqkUbJKK/ENEN81l53DVOEs6Y\nbPZb/jmArwO4COBVEwM5DvwSwMsP0Z6Z2IpLSU72W2bmNoDOfstHBjP/HcDGQ+RLkJgKzOc3j2Os\nw8Alkx+13/LkPn2PA89MbOW5UHyPi624gEsmd7Xf8jFi1cRUYD7XDuh/YnDJZNf7LXdiK0CXsZUT\nAzM7+wPwDch/dLgJ4MfHeN3fQBILAWStfw3AEMSquAHgrwAGXT6r/Zd6fA7wXCi+p42UyQ6QMtkB\nUiY7QMpkB0iZ7AApkx0gZbID/A94K1X7ZnK6jwAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAGkAAACPCAYAAAD5n/WlAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEU9JREFUeJztXV2oJVeV/lZVnZ++t7vTfdOttul2okxQgkRHQsZhfBgc\nA2EYcB6G0BkQH4S8jGLEB4NPDsyAzsOMPgkNhmlBJgbGYWQQBhFFBXESZswEE9TYKCa0xqS70/fv\n/FTVmoe9d62v+tQ595x7+1Zb7f6gufvs2lW1q3ftr9Zae621RVUR8buN5FZ3IGJvxEHqAOIgdQBx\nkDqAOEgdQBykDiAOUgdwoEESkYdE5Cci8qKIPH6zOhVRh+xXmRWRFMBPATwI4CUATwN4RFWfv3nd\niwCA7ADnPgDgRVW9BAAi8iSADwKYO0jr6+u6sXESAFCUpatc4SWZ23KPa6imq1xtto1yzeLzRPi+\n1jZJHGmtra1VdZcuXXpVVU/v1YuDDNJdAH5Fv18C8Mc3NhKRRwE8CgAnT57AY5/4GABga2sLQP1B\nyjBwNyC0mTfrm+q5rpgcbTirbGxbK6NoOF5Qf11ZaGQSeh/yPK/KR4+6wbnvvvuquvPnz/+yoWMz\nOHTBQVUvqOr9qnr/+vr6Yd/utsRBZtLLAM7R77O+bi7yPMeVK1cAAK+//joAowEAyLLm7iw7k+Yd\nLyaLelWfHavMpDCDahQHO76zs1OVp9Ox/ztd3JkGHGQmPQ3gHhF5q4j0AZwH8PUDXC9iDvY9k1Q1\nF5GPAvgvACmAJ1T1x4vOKTXF9u66L7v3Y7Jjr3lPBtax2sc+vLH2yhYJfXOk8HX2DSjo7c8wnOmL\nlPwtrHWyKlYzqKkOQK65P2yzpzew915Se4ZJ2XN/G4WYxTgI3UFVvwHgGwe5RsTeiBaHDuBAM2l1\nKCCllVEXHETow08cJEhr5/gGzeeFOnr9dJzPHC9ZyCC6qwkfTaI99aGXuX4xtaapUXJW0rP5m8xT\nMxYhzqQOIA5SB9Au3amiLJ2ekHvlJSEdoyiICko7wFJd1ZbKpaeggmpLIYtCybqJey/rDMm0RPA/\nEp2tA4BJvuuuT9JdkvasDyXRbOHuUebc8+UQZ1IHEAepA2iV7hQKhaMeSR0dDTKjh4zembScfX/q\nyqzVB2W2hCmKSnzWG/Znr1XrGN23ZuOZpVnGeOLuxxJbNrD/0p2R1ZeeivOiXbNQREtodSaJCHo9\nd8v1o85Uc+KoWcZ7YjMhw6z5hGcSf8tzP2sK4TfXWgx0diYxEm0WUmSP2Rx0qmlppi3W+65ev1aV\nN7evAwDSpdaxbujfymdEtI44SB1Aq3SXJILhEXfLU6c2AABv8MvpAADSkxKihQSzH3DFrBDBph5S\ns5BN2RTTQGE1SxCtsuridzhQ37QkPalm5iL69ZTYy1afF3EmdQBxkDqAdqW7BOj7RbHhESdxDYbW\nhSI3KYk7Jo3WaKOlYHguSTosiLZ6CS15Bweg2pI4S3SzS+Xz6DDQa0pm9JTorNenPvhOJg0W+70Q\nZ1IHEAepA9iT7kTkCQB/CeAVVX2nr9sA8FUAdwP4BYCHVfXqnteCVNJPUTgL8ebOZnX8SM/oqlSS\n9Bopwt6v4PyoyguF5IWUzvooMN3VKc7uEBb4mFrZatQT99/H1NrvEd1lLOm5a9Us40timZn0LwAe\nuqHucQDfUtV7AHzL/444JOw5k1T1uyJy9w3VHwTwZ758EcB3AHxqr2s5s5D3mpk4IeGO4+Z2m1Jv\nhuSDN9p1/mu9hA2ovD7uzxkcsXPGZsgUMcEh3DcjfSale+W89uSvm2UkkBTsl+faJtSX0dh87UrS\nn0KTcno4M6kJb1TVy778awBv3Od1IpbAgQUHdeQ+V64UkUdF5BkReWZ7e/ugt/u9xH71pN+IyBlV\nvSwiZwC8Mq+hql4AcAEAzp47q2HtRiT8tY9unhvVlAkLBn69iD/w9AEP+kpRGL1Mp7ykTX7G3lTD\n9+WPOV+jEi6EKY7KXk5JEvtvZM8lLoc1p+KQBIcmfB3Ah335wwD+Y5/XiVgCew6SiPwrgB8AeLuI\nvCQiHwHwWQAPisjPAHzA/444JCwj3T0y59Cfr3ozBVB6mlNvwhEy5bDlux7p4M0zJN0lTJNTr8+Q\nW48QH04n5KvtpUsQnU4nRoejybgql55+U/IASsm/u6LMhPWoZPY4PcMkb4/uIlpEy27GAmi4pf8r\n1gWOktsemSQ42nK6x7E1Xlcy68L1624m9MmgmWUWSbG5s1WVj63PRv1tb9vx8e5uVQ5CREqzo9+3\npfg1v/SfsJmCrBtEEpUQwoLJsogzqQOIg9QBtOxmLCgLbwz1njhasqnHqGBr08wrm9ec7VZz0jsK\no7bXXnV0NRjaR/nY8VNV+epVM+IGumXdaGuTjhdWH1iOPeVYP1uDo7uCBJ5a6BvrYr5YaIyquC0R\nB6kDaNfNWI1Nilx8HesSLL3Z+5PnjiI4mjufWtudbSfdlWrElMqoKu+SRfy4t2LnRJ0TMiGtr5kl\nfTBw+hGvN/UHpjNpQ7SH8joX6U/sRbQq4kzqAOIgdQAtK7MWChuks4LjrEhK4hw8o6Erj0dGYWS9\nQepXCxNSjDc3TRnO+pZ6IAlRHFNOmmEy2doRU3aPHXfSW543+3o3BbfVluXpuhLOS2bP2QtxJnUA\nLccn0UyqknTZmzce2Ru7dsTMOoOBmwmbPtUNAIy3+WN+HACQkF3p2iaZgk6xUdSV2TWYEzXxmx6M\nqVMSUtisE4y1HMExL2NYuO9+BIg4kzqAOEgdQKt0l0Fwp3iK8BSTTYxqOO1Obem55+jm2q4JAwWZ\nk950zOcrIgPzztSs2Seyjarc9x5FA6K4TTILXb9uNBn0shEJLBn50p0+7fIJ9oYkmPBSOvUn6znr\nec3LaUnEmdQBxEHqAJZxMz4H4MtwvnUK4IKqfmG/rsbBTBwkJ5Z2OOaVl6GHQx9fe+JEVVcW1vX1\n9TVfZ7SzcYeZgqolcwBDH4mepaYPjUfk0EgeS8EFjS3ma2t3zDwSm40KWvYvKNK8SrdWHI4VPAfw\nSVW9F8B7AfytiNyL6GrcGpZxRLkM4LIvb4rIC3BJcld3NRZbo6kEAxYW0Lw8HmbS6dO2RqQlLWMP\nnZ5UFuQwovRoA/rwV3FC1vbkHTarWA+ajHv1vgI4efLkbFtOkTMvy1e5OAXpIqz0TfI+4X8E4IeI\nrsatYelBEpGjAP4NwGOqep2PLXI1rrsZbzU1idgDS+lJItKDG6CvqOrXfPVSrsbsZnzurreofYRn\n43WEPG3Y1BKyHB8/bh/tkvLWZIkTGKQwCuxvmBChFDVR+CjwfGwUOKA1IjawluUx15aEiWCiAkx/\nShoiPIA5CRcPIxxTnKn3SwBeUNV/okPR1bglLDOT/hTAhwA8JyI/8nWfhnMtfsq7Hf8SwMOH08WI\nZaS77wMN2S4cVnI1ViiKchyuC8CSEwLAgEIZSwrmCrU1F1/qenDhTcjNeDAw6ksGdq2Jp6iCrt/P\nOCrC+hui2nPKwsXOk5nvT03zIUkvqYWHhgeL0ee3JeIgdQCtp5yuzCYaUjDzght54nBSi7C7CuX6\naVIa6/tMUCZ8WmsPEerDAVMcRWCMjc72Sg+toT+16PXFu8lEX/DbFK07ooTPbIglanLmADhhu/sF\n3Dh7ZE5bBzZu5rnpREH4YKNrbf+JBqeTXtpvblsZS1kYaHZUqXaIWV1uiDOpC4iD1AG0TneVQ48v\nJBlHWhFVsKUlUETN5GIUlCFESlCIJnv1DGapTUv2AOKPPbsG+/8eqtvdMcFicMSvY/G+GhxPRo8W\nfALn0fsixJnUAcRB6gBugZ7k9YUQ2U26EesQnMMnSHcccV7S8ZDRixcN2Wunrpq4Njm7FnHSeKLR\nEPlRCxLLzP15OnH1WcbR6daHydSkytzvUZHM2bdwEeJM6gDiIHUA7dKdSJW4YtcnI7x61fy777zz\n5JzTvCJYq6XUAmG7nTmOh2HTQ9fWoWRFk6Q3JkEpGpRoeq/DdqQT2m5nQguEu2Qx395ypqlyHxsv\nxpnUAbQejhk+2Fs+gQaHQr52xfZ2kIbE6TJnFxZLsk56Fr38YzU3Yo4ZsvO5jzzDrN92fHZZnyPK\nOUJjShLL65vOLeRUZsvvyyLOpA4gDlIH0HKyDcuoNfaZs0Zji5SYTsxTrInuahtQsE7UkJCd6S5P\nZ9dw5m1yxYnitSHQrXYNL3zwjs281J5kpDPlTnA4UR6CWUhEhiLy3yLyrIj8WET+zte/VUR+KCIv\nishX/f7nEYeAZehuDOD9qvouAO8G8JCIvBfA5wD8s6r+IYCrAD5yeN38/cYy3kIKILie9vw/BfB+\nAH/j6y8C+AyALy68mJh0lfmFNM6VyiTECdMrmptDFSE3a82TnGkrbXjMOVuY1ppIaNpMd6GeE83X\nIsdYFwvmIvJBXxZLCQ4iknqfu1cAfBPAzwFcU9Ugb74E58TfdG7MZnxALCU4qHNse7eInADw7wDe\nsewN2M34zW8+q6V/PYMBlBOcc+YtcFREeFFpJtWFBH+Nmk8bRbXzGs8eewU2ObvMW/JOfJio0K4y\nCacrpbWyxEewz7OKLMJKZ6jqNQDfBvAnAE6IVNktzgJ4eeW7RyyFZaS7034GQUSOAHgQwAtwg/XX\nvln0BT9ELEN3ZwBcFPfFTwA8par/KSLPA3hSRP4ewP/COfUvhIhQ0gl365zWXBKS4jnblX2AWTQg\nugtt6aNd9yyy6wbDKtNObc9Aqg8bA9f1JBMSJiNvTOVlco6kSCnU1F9iWqyuJy0j3f0fXODYjfWX\nADyw8h0jVkY0C3UAre/Y3O85K3Av61d1AWXNa4dO9HlbOXyB962oTDns7ksrQwWbkCq6o37NcWis\nqLFGsxS8Fsw+KfWbTOpKERaFT6yYx+TttyfiIHUALS/6KcrSSXPh73RCzoY9y3+qtDl8GXzBiYrS\nmqknKMZEO6Qkp7lFVYQM+f2+pWqb0F4VuzujmbYcJxuWzAGjzIwkwglFcPQGVh8cKQeHlGwj4haj\n5fUkpagF90ZlWfNHu666BPNM83pS0GOSOakze7S/RIjA4F1luA8hBQ5gM5Ojz1k/Czt88p6ASZN6\nB4s+309S4ziTOoA4SB1Ay4JDienU051fg8nILVcpNLO+KW/42HIIJX+AG8IuxK41oU2ujFJZ37Hr\n8tY702npz580Hi8mjgaFaXZObtdS3TV6JictjTiTOoA4SB3ALTAL1ZO2Zz1y8c1Jz6klKAxmZk6M\nPnt9tlZzQFmSzlJbLfCLVvXSjKM1XDktm48HaxAHi9W2OFXKm+TpPUmjnnRbIg5SB9ByVIWaP4CX\nvvLC8p8WhfGGUu4fLUM3F4ff17c9pTxDQzM3hc3mmQ5ZehtTOVAiW9RHY9ritAzPQBJdwSkGqmJF\niYNhDCK7LdHqTOr1MrzpzJ0AgJ0dl3Cds2kVOXvq8KwK8UcNG/HCPvz1NDG0D/rE2oZEgkNKuL6x\nYckOOSQ09etFnB2MZ12YKf2+/TeOJ6OZ44CZno4eM7PTsogzqQOIg9QByH5SIO/7ZiK/BbAN4NXW\nbtouTmG1Z/sDVT29V6NWBwkAROQZVb2/1Zu2hMN6tkh3HUAcpA7gVgzShVtwz7ZwKM/W+jcpYnVE\nuusAWh0kEXlIRH7i42w7u5WPiJwTkW+LyPM+jvjjvn5DRL4pIj/zf5tTvKwKVW3lH1zswc8BvA1A\nH8CzAO5t6/43+VnOAHiPLx8D8FMA9wL4RwCP+/rHAXzuZtyvzZn0AIAXVfWSqk4APAm3B1PnoKqX\nVfV/fHkTLl4r7Cl10Te7COCvbsb92hykuwD8in7PjbPtEtrYUyoKDgfAfveUWhVtDtLLAM7R707H\n2S7aU8ofn7un1Kpoc5CeBnCPz6TSB3Aebg+mzqHtPaXatoL/BYDPw0l6T6jqP7R285sIEXkfgO8B\neA4W2vZpuO/SUwDeAr+nlKpeOfD9osXhdx9RcOgA4iB1AHGQOoA4SB1AHKQOIA5SBxAHqQOIg9QB\n/D/EvwlzKkI6WgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f73f502c160>"
+       "<matplotlib.figure.Figure at 0x7f0b2652d0f0>"
       ]
      },
      "metadata": {},
@@ -77,14 +77,15 @@
     }
    ],
    "source": [
-    "image = io.imread(PATH_TO_DATA + 'rtsd-frames/' +data.iloc[1].filename)\n",
-    "xmin = data.iloc[1].x_from\n",
-    "ymin = data.iloc[1].y_from\n",
-    "xmax = xmin + data.iloc[1].width\n",
-    "ymax = ymin + data.iloc[1].height\n",
+    "num = 102091\n",
+    "image = io.imread(PATH_TO_DATA + 'rtsd-frames/' +data.iloc[num].filename)\n",
+    "xmin = data.iloc[num].x_from\n",
+    "ymin = data.iloc[num].y_from\n",
+    "xmax = xmin + data.iloc[num].width\n",
+    "ymax = ymin + data.iloc[num].height\n",
     "\n",
-    "plt.figure(figsize=(1, 1))\n",
-    "#plt.figure\n",
+    "plt.figure(figsize=(2, 2))\n",
+    "#plt.figur2\n",
     "#from matplotlib import rcParams\n",
     "#rcParams['figure.figsize'] = (1, 1)\n",
     "plt.imshow(image[ymin:ymax, xmin:xmax])\n",
@@ -109,15 +110,6 @@
     "flags.DEFINE_string('output_path', '', 'Path to output TFRecord')\n",
     "FLAGS = flags.FLAGS"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
